Finished up styling the copy-to-clipboard button. Fixed a bug where it would flicker to the next line and back. Added the javascript needed to actually copy to clipboard. It works now.

--- a/style.css
+++ b/style.css
@@ -51,6 +51,10 @@ main {
 	font-size: 110%;
 }
 
+label {
+	cursor: pointer;
+}
+
 /*
 * I want the radio button to be darker.
 * First, we hide it.
@@ -91,34 +95,45 @@ label input:checked + .mock-radio {
 				linear-gradient(to top, #81b62b, #5f9701);
 }
 
-#output {
+#output-container {
 	display: inline-block;
-	overflow-wrap: break-word;
-	min-height: 2em;
+	position: relative;
+	line-height: 2em;
 	min-width: 16em;
 	max-width: 100%;
 	background-color: white;
 	border: 1px solid #aaa;
 	border-radius: 5px;
 	box-shadow: inset 0 0 2px lightgrey;
+	overflow: hidden;
+}
+
+#output {
+	float: left;
+	max-width: 100%;
+	overflow-wrap: break-word;
+	margin-right: 5px;
 }
 
 #copy-button {
+	position: relative;
 	float: right;
-	background-color: white;
-	border-radius: 5px;
+	right: -5ch;
+	transition: right 0.5s;
 	padding: 0px 5px;
 	height: 2em;
-	width: 1.5ch;
-	transition: width 0.5s;
-	overflow: hidden;
-	white-space: nowrap;
 	border: 1px solid #aaa;
 	border-radius: 5px;
+	background: linear-gradient(#eef, #ddf);
+	cursor: pointer;
 }
 
 #copy-button:hover {
-	width: 7ch;
+	right: 0;
+}
+
+#copy-button:active {
+	background: linear-gradient(#ddf, #eef);
 }
 
 footer {
